# Paddle-MPS-Dev

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  CMakeLists.txt  MPS_IMPLEMENTATION_SUMMARY.md  MPS_README.md  README.md  README_EN.md  README_ZH.md  README_cn.md  README_ja.md  SECURITY.md  SECURITY_cn.md  SECURITY_ja.md  _typos.toml  pyproject.toml  setup.py  sgconfig.yml  test_mps_availability.py  test_mps_kernels_quick.py  test_mps_matmul_pow_tanh.py  test_mps_unary_operators.py
paddle/cinn/runtime/: CMakeLists.txt  arch_device.h  backend_api.cc  cinn_runtime.cc  cinn_runtime.h  flags.cc  intrinsic.h
paddle/cinn/runtime/cuda/: cinn_cuda_runtime_source.cuh  cuda_util.cc  cuda_util.h  float16.h
paddle/cinn/runtime/sycl/: sycl_backend_api.cc  (+4 more)
paddle/fluid/: CMakeLists.txt
paddle/fluid/distributed/: CMakeLists.txt
paddle/fluid/eager/: CMakeLists.txt  activation_offloader.cc  activation_offloader.h  backward.cc  backward.h  general_grad.h  grad_node_info.cc  grad_node_info.h  grad_tensor_holder.cc  grad_tensor_holder.h  nan_inf_utils.cc  tensor_wrapper.h  utils.cc  utils.h
paddle/fluid/fp8/: CMakeLists.txt
paddle/fluid/framework/: CMakeLists.txt  attribute.cc  attribute.h  attribute_checker.h  barrier.h  block_desc.h  compiled_program.cc  compiled_program.h  custom_operator.cc  custom_operator.h  custom_operator_utils.h  data_device_transform.cc  data_feed.cc  data_feed.cu  data_feed.h  data_layout_transform.cc  data_layout_transform.h  data_set.cc  data_transform.cc  data_transform.h  data_type.cc  data_type.h  data_type_transform.cc  device_worker.cc  device_worker.h  device_worker_factory.cc  dist_multi_trainer.cc  distributed_strategy.proto  dlpack_tensor.cc  dlpack_tensor.h  downpour_worker.cc  downpour_worker_opt.cc  eigen.h  executor.cc  executor.h  executor_cache.cc  executor_cache.h  executor_gc_helper.cc  feed_fetch_method.cc  framework.proto  (+52 more)
paddle/fluid/imperative/: CMakeLists.txt  all_reduce.cc  amp_auto_cast.cc  amp_auto_cast.h  amp_utils.h  basic_engine.cc  bkcl_context.cc  data_loader.cc  dygraph_grad_maker.h  gloo_context.cc  gloo_context.h  gradient_accumulator.cc  gradient_accumulator.h  heter_ccl_context.cc  infer_shape_context.h  layer.cc  layer.h  layout_autotune.cc  layout_transformer.h  nccl_context.cc  op_base.h  partial_grad_engine.cc  prepared_operator.cc  prepared_operator.h  reducer.cc  reducer.cu  reducer.h  tracer.cc  tracer.h  var_helper.cc  var_helper.h  variable_wrapper.h  xccl_context.cc
paddle/fluid/inference/: CMakeLists.txt  io.cc
paddle/fluid/jit/: layer.cc  serializer.cc
paddle/fluid/operators/: CMakeLists.txt  activation_op.h  array_operator.h  assert_op.cc  assign_op.h  batch_norm_op.cc  batch_norm_op.h  beam_search_decode_op.h  beam_search_decode_op_def.h  cast_op.cc  fill_constant_op.cc  get_tensor_from_selected_rows_op.cc  increment_op.cc  isfinite_op.h  load_combine_op.cc  load_combine_op.h  load_op.cc  lod_array_length_op.cc  lod_reset_op.cc  lod_reset_op.h  matmul_op.cc  memcpy_d2h_op.cc  memcpy_h2d_op.cc  memcpy_op.cc  print_op.cc  py_func_op.cc  repeat_interleave_op.cc  reshape_op.cc  run_program_op.cc  save_combine_op.cc  save_combine_op.h  save_op.cc  select_input_op.cc  select_op_helper.h  select_output_op.cc  set_value_op.cc  slice_op.cc  split_op.cc  sum_op.cc  tensor_array_to_tensor_op.cc
paddle/fluid/platform/: CMakeLists.txt  densetensor_printer.h  enforce.h  init.cc  init.h  onednn_helper.h
paddle/fluid/pybind/: CMakeLists.txt  arg_pre_process.cc  arg_pre_process.h  args_mapper.cc  args_mapper.h  auto_parallel_py.cc  communication.cc  communication.h  compiled_program.cc  cuda_streams_py.cc  cuda_streams_py.h  cudart_py.cc  cudart_py.h  custom_device_py.cc  data_set_py.cc  data_type_caster.h  deep_ep_api.cc  dist_api.cc  distributed_py.cc  eager.cc  eager.h  eager_custom_python_api.h  eager_functions.cc  eager_generator.cc  eager_legacy_custom_python_api.h  eager_math_op_patch.cc  eager_method.cc  eager_properties.cc  eager_py_layer.cc  eager_utils.cc  eager_utils.h  exception.h  fleet_py.cc  generator_py.cc  global_value_getter_setter.cc  gloo_wrapper_py.cc  imperative.cc  inference_api.cc  io.cc  ir_meta_tensor.cc  (+24 more)
paddle/fluid/sub_graph/: sub_graph_checker.cc
test/cpp/: CMakeLists.txt
test/cpp/auto_parallel/: CMakeLists.txt  argsort_co_shard_spmd_rule_test.cc  expand_as_spmd_rule_test.cc  expand_spmd_rule_test.cc  fused_linear_param_grad_add_spmd_rule_test.cc  fused_rms_norm_spmd_rule_test.cc  index_select_co_shard_spmd_rule_test.cc  matmul_co_shard_spmd_rule_test.cc  softmax_co_shard_spmd_rule_test.cc  softmax_grad_spmd_rule_test.cc  spmd_rule_test.cc  spmd_rule_test_util.cc  spmd_rule_test_util.h  tile_co_shard_spmd_rule_test.cc  transpose_co_shard_spmd_rule_test.cc
test/cpp/cinn/: CMakeLists.txt
test/cpp/compat/: ATen_CUDABlas_test.cc  ATen_CUDAContext_test.cc  ATen_TensorAccessor_test.cc  ATen_Utils_test.cc  ATen_all_test.cc  ATen_any_test.cc  ATen_as_strided_test.cc  ATen_autograd_test.cc  ATen_basic_test.cc  ATen_chunk_test.cc  ATen_clamp_test.cc  ATen_coalesce_test.cc  ATen_cuda_test.cc  ATen_dense_sparse_conversion_test.cc  ATen_empty_test.cc  ATen_equal_test.cc  ATen_expand_test.cc  ATen_eye_test.cc  ATen_factory_default_dtype_test.cc  ATen_flatten_test.cc  ATen_from_blob_test.cc  ATen_hook_test.cc  ATen_index_test.cc  ATen_item_test.cc  ATen_local_scalar_dense_test.cc  ATen_memory_test.cc  ATen_narrow_test.cc  ATen_new_test.cc  ATen_nnz_test.cc  ATen_philox_test.cc  ATen_pin_memory_creation_test.cc  ATen_record_stream_test.cc  ATen_rename_test.cc  ATen_reshape_test.cc  ATen_resize_custom_kernel_test.cc  ATen_resize_test.cc  ATen_select_test.cc  ATen_split_test.cc  ATen_squeeze_test.cc  ATen_std_var_test.cc  (+32 more)
test/cpp/eager/: test_utils.h
test/cpp/fluid/: CMakeLists.txt
test/cpp/imperative/: CMakeLists.txt  test_layer.cc
test/cpp/inference/: test_helper.h
test/cpp/new_executor/: standalone_executor_pir_test.cc
test/cpp/phi/: CMakeLists.txt
test/cpp/prim/: test_vjp.cc
test/cpp/utils/: CMakeLists.txt  exception_test.cc  exception_test_utils.h
(+7443 files in other folders)
